--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title> responsivo 2º ano</title>
 </head>
 <body>
- <div class="container"></div><img src="zelda.jpeg" width="30%" height="30%" alt="foca nos estudos" >
- <h1>Só falta um trimestre </h1>
+ <div class="container"></div><img src="zelda_ooc.jpeg" width="30%" height="30%" alt="foca nos estudos" >
+ <h1> </h1>
  <h2>E a gente está como?</h2>
  <h1>Sedentos pelo saber  </h1>
  <div class="container"></div><img src="shadow.jpeg" width="30%" height="30%" alt="foca nos estudos" >
