--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <div class="container"></div><img src="zelda_ooc.jpeg" width="30%" height="30%" alt="foca nos estudos" >
  <h1>   o melhor jogo de todos os tempos</h1>
  <h2>com a melhor historia e avaliação de todos os tempos</h2>
- <h1>Sedentos pelo saber  </h1>
+ <h1>em segundo lugar shadow of the colossus  </h1>
  <div class="container"></div><img src="shadow.jpeg" width="30%" height="30%" alt="foca nos estudos" >
 
 </body>
